--- a/style.css
+++ b/style.css
@@ -37,14 +37,15 @@ nav {
 
 nav a {
   transition: background-color 0.5s ease-in-out;
-  transition: box-shadow 0.5s ease-in-out;
   text-decoration: none;
   padding: 10px;
+  width: 50px;
+  aspect-ratio: 5/1;
   border-radius: 20px;
+  text-align: center;
 }
 
 nav a:hover {
-  box-shadow: inset black 0px 0px 5px 0px, black 0px 0px 4px 0px;
   background-color: var(--black2);
 }
 
@@ -86,6 +87,7 @@ nav a:hover {
   border: 1px solid rgba(255, 255, 255, 0.2);
   cursor: pointer;
   overflow: hidden;
+  filter: drop-shadow(0px 0px 10px black);
 }
 
 .about .photo .photo-text{
@@ -121,6 +123,7 @@ nav a:hover {
   object-fit: cover;
   cursor: pointer;
   border: 1px solid rgba(255, 255, 255, 0.2);
+  filter: drop-shadow(0px 0px 10px black);
 }
 
 
